Fixed responsive view overflow for each page

--- a/css/about.css
+++ b/css/about.css
@@ -49,6 +49,10 @@ body.menu-open {
     width: 100%;
 }
 
+main {
+    position: relative;
+}
+
 :root {
     --container-min: 1200px;
     --container-max: 1600px;
@@ -485,7 +489,7 @@ a {
         background-size: contain;
         pointer-events: none;
         z-index: 11;
-        top: 150px;
+        top: 300px;
         right: -60px;
         width: 350px;
         height: 350px;
@@ -500,8 +504,7 @@ a {
         background-size: contain;
         pointer-events: none;
         z-index: 11;
-        bottom: -100px;
-        left: -60px;
+        left: -50px;
         width: 350px;
         height: 350px;
         opacity: 0.3;
@@ -522,6 +525,7 @@ a {
     .text-section::before {
         display: none;
     }
+    
 }
 
 /* What Sets Flok Apart */
@@ -540,7 +544,6 @@ a {
     background-size: contain;
     pointer-events: none;
     z-index: 11;
-    bottom: -1200px;
     right: 0px;
     width: 400px;
     height: 400px;
@@ -645,7 +648,6 @@ a {
     background-size: contain;
     pointer-events: none;
     z-index: 11;
-    bottom: -1800px;
     left: 0px;
     width: 400px;
     height: 400px;
